# moonstone

./: .gitignore  README.md  __init__.py  __main__.py  api.py  config.py  desktop.py  endpoints.py  errors.py  headless.py  mainloop.py  pyproject.toml  pytest.ini  run_tests.sh  search.py  settings.py  signals.py  tray.py
formats/: __init__.py  html.py  markdown.py  plain.py  wiki.py
notebook/: __init__.py  cache.py  content_updater.py  info.py  layout.py  notebook.py  page.py  pool.py
notebook/index/: __init__.py  links.py  pages.py  tags.py
parse/: __init__.py  links.py
profiles/: __init__.py  base.py  logseq.py  moonstone_profile.py  obsidian.py  zim.py
static/: dashboard.css  index.html  moonstone-demo.html  moonstone.css  workspace.css
tests/: README.md  __init__.py  conftest.py  test_aliases_schema.py  test_content_updater.py  test_e2e_obsidian_features.py  test_filewatcher_encoding.py  test_index_alias_storage.py  test_link_4tuple.py  test_lookup_by_alias.py  test_obsidian_aliases.py  test_obsidian_attachment_refs.py  test_obsidian_frontmatter.py  test_obsidian_links.py  test_obsidian_tags.py  test_obsidian_tags_adversarial.py  test_schema_migration.py  test_strip_metadata_colon_fix.py  test_tag_lower.py
tests/test_api/: __init__.py  test_api_binary.py  test_api_obsidian_attachments.py  test_api_pages.py  test_validation.py
tests/test_unit/: __init__.py  (+13 more)
webbridge/: __init__.py  api.py  api_routes.py  applets.py  dispatcher.py  endpoints.py  events.py  installer.py  moonstone_sdk.py  openapi.py  server.py  services.py  validation.py  websocket.py
(+13 files in other folders)
